Fix text alignment for blockquote cites

--- a/content/themes/dude/sass/gutenberg/blocks/_core-blockquote.scss
+++ b/content/themes/dude/sass/gutenberg/blocks/_core-blockquote.scss
@@ -54,6 +54,7 @@ blockquote {
   cite {
     color: var(--color-blockquote);
     margin-top: 2.5rem;
+    text-align: left;
 
     > a {
       color: var(--color-blockquote);
